# VideoGameVersionControl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: DesignBrief.md  ImplementationBible.md  ProjectBible.md  ProjectGoals.md
resources/presets/: kerbal_space_program.json  minecraft_java.json  skyrim_se.json
scripts/: package.sh  setup_dev_env.sh
src/: CMakeLists.txt  main.cpp
src/core/: GitService.cpp  GitService.h  PresetManager.cpp  PresetManager.h  ProjectConfig.cpp  ProjectConfig.h  SnapshotManager.cpp  SnapshotManager.h
src/core/types/: GamePreset.h  Result.h  Snapshot.h
src/ui/: CreateSnapshotDialog.cpp  CreateSnapshotDialog.h  MainWindow.cpp  MainWindow.h  RestoreDialog.cpp  RestoreDialog.h  SettingsDialog.cpp  SettingsDialog.h  SnapshotListWidget.cpp  SnapshotListWidget.h
src/ui/models/: SnapshotListModel.cpp  SnapshotListModel.h
src/utils/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  PathDetector.cpp  PathDetector.h
tests/: CMakeLists.txt  test_gitservice.cpp  test_presetmanager.cpp  test_snapshotmanager.cpp
